# HanziStyleForge-Fusion

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATA_FLOW.md  LICENSE  MANIFEST.json  METHOD_REFERENCES.md  NOTICE  QUICK_START.txt  README.en.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  TEST_REPORT.md  THIRD_PARTY_NOTICES.md  UPGRADE_FROM_2.1.txt  VERSION.txt  clear_safe_stop.bat  config.json  config_fast_test.json  config_fusion_fast_test.json  config_fusion_months_12gb.json  config_months_12gb.json  hanzistyleforge.py  install_cuda130.bat  open_qa.bat  pyproject.toml  request_safe_stop.bat  requirements.txt  run_months_resilient.bat  run_status.bat  selftest.py  test_chars.txt  verify_project.bat
data/: NOTICE_CJK_DECOMP.txt  README_CJKVI_IDS.txt
fonts/: PUT_TARGET_TTF_HERE.txt
hanzistyleforge/: __init__.py  analysis.py  benchmark.py  build_font.py  charset.py  cli.py  component_atlas.py  config.py  contour_polish.py  contract.py  dataset.py  decomposition.py  ensemble.py  features.py  fusion_dataset.py  fusion_diffusion.py  fusion_inference.py  fusion_model.py  fusion_selftest.py  fusion_training.py  ids_data.py  image_cache.py  inference.py  longrun.py  losses.py  marathon.py  marathon_refine.py  model.py  project_lock.py  proxy.py  qa.py  render.py  report.py  retrieval.py  runtime.py  topology.py  training.py  util.py  vectorize.py
refs/: PUT_REF_FONT_HERE.txt
